--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -8267,7 +8267,7 @@ spec:
                           Defines the SecurityContext applied to all workspace-related containers.
                           When set, the specified values are merged with the default SecurityContext configuration.
                           This setting takes effect only if both `devEnvironments.disableContainerBuildCapabilities`
-                          and `devEnvironments.disableContainerRunCapabilities are` set to `true`.
+                          and `devEnvironments.disableContainerRunCapabilities` are set to `true`.
                         properties:
                           allowPrivilegeEscalation:
                             description: |-
