--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -123,3 +123,5 @@ entries:
     replaces: eclipse-che.v7.107.0
   - name: eclipse-che.v7.109.0
     replaces: eclipse-che.v7.108.0
+  - name: eclipse-che.v7.110.0
+    replaces: eclipse-che.v7.109.0
